--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/bms-profile.png" alt="maple profile"></td>
+        <td><img src="bms-profile.png" alt="maple profile"></td>
         <td>  
           <h1>Luca</h1>
           <p><em>Student</em></p>
