--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1>Luca</h1>
           <p><em>Student</em></p>
           <p>
-            I am a student from Brazil attending the Seoul National University in Korea. I like <a href="https://tfwvuq.by.files.1drv.com/y4mMwQeLlczmyTy_4AH0dAMg_XKYCatC4jF7h0lfrpVAhRY3ulgUPAtHl6TVBe7UivYFUhxwQDxiJeALXzeA9YCj95KizTlgJ4fmjpZ9HrPYepFQ_ZuZIUBIuNp8ie4RRK9aZbn6BdcztEqL1ckJavTunDnX2axATmpaK-RDKvt-bZAx8vKMwVAfBKrxAmrBBIzQ0XYRG4tN5995n44wG9Dow?width=660&height=495&cropmode=none">plants</a> 🌱 and
+            I am a student from Brazil attending the Seoul National University in Korea. I like <a href="plants.html">plants</a> 🌱 and
             <a href="https://www.notebookcheck.net/">technology</a> 💻
           </p></td>
       </tr>
