--- a/plants.html
+++ b/plants.html
@@ -14,6 +14,12 @@
     height="660"
     alt="flowering-cactus"
   />
+  <img
+    src="https://tfwvuq.by.files.1drv.com/y4mMwQeLlczmyTy_4AH0dAMg_XKYCatC4jF7h0lfrpVAhRY3ulgUPAtHl6TVBe7UivYFUhxwQDxiJeALXzeA9YCj95KizTlgJ4fmjpZ9HrPYepFQ_ZuZIUBIuNp8ie4RRK9aZbn6BdcztEqL1ckJavTunDnX2axATmpaK-RDKvt-bZAx8vKMwVAfBKrxAmrBBIzQ0XYRG4tN5995n44wG9Dow?width=660&height=495&cropmode=none"
+    width="660"
+    height="495"
+    alt="canteiro"
+  />
   <br>  
     <a href="index.html">Home</a>
 </html>
