--- a/contact-me.html
+++ b/contact-me.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact me</title>
-  </head>
+  </head>Name
   <body>
     <h1>My contact details</h1>
     <ul>
       <li>Phone number: 010-XXXX-XXXX</li>
-      <li>email:llu.@xmail.com</li>
+      <li>email:email@email.com</li>
     </ul>
     <hr color="silver" />
     <form action="mailto:info@luca.com" method="post" enctype="text/plain">
       <label for="">Your name:</label>
-      <input type="text" name="yourName" value="Name" /><br />
+      <input type="text" name="yourName" value="" /><br />
       <label for="">Your Email:</label>
-      <input type="email" name="yourEmail" value="Email" /><br />
+      <input type="email" name="yourEmail" value="" /><br />
       <label for="">Your Message:</label><br />
       <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br />
       <input type="submit" value="Submit " />
