--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1>Luca</h1>
           <p><em>Student</em></p>
           <p>
-            I am a student from Brazil attending the Seoul National University in Korea. I like <a href="plants.html">plants</a> 🌱 and
+            I am a Brazilian student attending the Seoul National University in Korea. I like <a href="plants.html">plants</a> 🌱 and
             <a href="https://www.notebookcheck.net/">technology</a> 💻
           </p></td>
       </tr>
